--- a/package.json
+++ b/package.json
@@ -1,10 +1,49 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/datetimepicker": "^3.0.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.6",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.0",
+    "expo-asset": "~8.1.7",
+    "expo-image-manipulator": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-mail-composer": "~8.2.1",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
+    "expo-secure-store": "^9.1.0",
     "react": "~16.11.0",
+    "react-devtools": "^4.8.2",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "0.11.7"
+    "react-native-animatable": "^1.3.3",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^2.3.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-image-picker": "^2.3.3",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-star-view": "^1.1.3",
+    "react-native-stars": "^1.2.1",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-stack": "^2.8.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "expo-calendar": "~8.2.2"
   },
   "devDependencies": {
     "@babel/core": "7.9.0"
